Corrige insert da migration v2 refazendo o banco de dados. Ajusta asserts dos testes findAllTests XML, JSON e YAML para personOne e personFive.